# svg_viewer

./: Cargo.toml
.github/workflows/: ci.yml  release.yml
src/: app.rs  clipboard.rs  error.rs  export.rs  file_navigator.rs  main.rs  renderer.rs  svg_document.rs  viewport.rs
src/ui/: canvas.rs  export_dialog.rs  mod.rs  shortcuts.rs  status_bar.rs  toolbar.rs
