[package]
name = "svg-viewer"
version = "0.1.0"
edition = "2021"
description = "A fast, cross-platform SVG desktop viewer"
license = "MIT"

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "persistence", "x11", "wayland"] }
egui = "0.33"
egui_extras = "0.33"
resvg = "0.47"
usvg = "0.47"
tiny-skia = "0.12"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tiff", "webp"] }
rfd = "0.15"
arboard = { version = "3", features = ["image-data"] }
clap = { version = "4", features = ["derive"] }
natord = "1.0"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
strip = true
